--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
   <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 </head>
 <body>
-  <div class="container">
+  <div id="react-container" class="container">
     <h1>Live Polling</h1>
   </div>
+  <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
